syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message StoreChunkRequest {
    int64 fileSize = 1;
}

message RetrieveFileRequest {
    string filename = 1;
}

message MetaData {
    string filename = 1;
    int32 chunkId = 2;
}

message HeartBeatSignal {
    repeated MetaData meta = 1;
    double freeSpace = 2;
    string timestamp = 3;
}

message GetFileListRequest {
    bool isGet = 1;
}

message ControllerMessageWrapper {
    oneof msg {
        StoreChunkRequest storeChunkRequestMsg = 1;
        HeartBeatSignal heartBeatSignalMsg = 2;
        RetrieveFileRequest retrieveFileMsg = 3;
        GetFileListRequest getFileListMsg = 4;
    }
}

